google chrome spacing fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* Chrome 29+ */
+@media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm) {
+  .spacing {
+    letter-spacing: 4px;
+  }
+}
+
 .bold {
   font-weight: bold;
 }
